Add fragments to application

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,23 +3,23 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/news"
             android:icon="@drawable/baseline_fiber_new_black_24dp"
             android:title="Novidades" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/presence"
             android:icon="@drawable/baseline_beenhere_black_24dp"
             android:title="Presença" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/quiz"
             android:icon="@drawable/baseline_view_list_black_24dp"
             android:title="Quiz" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/assignments"
             android:icon="@drawable/baseline_book_black_24dp"
             android:title="Minhas pesquisas" />
         <item
-          android:id="@+id/nav_message"
+          android:id="@+id/messages"
           android:icon="@drawable/baseline_mail_black_24dp"
           android:title="Mensagens" />
     </group>
