--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:src="@drawable/pp" />
 
     <EditText
+        android:id="@+id/username"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -22,6 +23,7 @@
         android:hint="Login" />
 
     <EditText
+        android:id="@+id/password"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
