--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
+        android:text="admin"
         android:hint="Login" />
 
     <EditText
@@ -27,6 +28,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:text="admin"
         android:gravity="center_horizontal"
         android:hint="Senha" />
 
