--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -18,6 +18,6 @@
         android:gravity="center"
         android:text="Não há mensagens no momento"
         android:textSize="22sp"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </FrameLayout>
