--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
-        android:text="admin"
+        android:text="3401"
         android:hint="Login" />
 
     <EditText
@@ -28,7 +28,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="admin"
+        android:text="54469"
         android:gravity="center_horizontal"
         android:hint="Senha" />
 
