--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
   <dimen name="fab_margin">16dp</dimen>
+
+
+    <dimen name="dialog_width">300dp</dimen>
+    <dimen name="dialog_height">400dp</dimen>
+
 </resources>
