--- a/app/src/main/res/layout/lecture_item.xml
+++ b/app/src/main/res/layout/lecture_item.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/subject"
@@ -24,6 +24,12 @@
                 android:text="subject"
                 android:textColor="@android:color/primary_text_light"
                 android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/topic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Assunto: Ecologia" />
 
             <TextView
                 android:id="@+id/professor"
@@ -35,17 +41,17 @@
                 android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/holo_blue_dark"
-                android:text="Status: Atendida"/>
+                android:text="Status: Atendida"
+                android:textColor="@android:color/holo_blue_dark" />
 
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:text="22/22/22"
                 android:textColor="@android:color/primary_text_light"
-                android:textSize="18dp"
-                android:text="22/22/22" />
+                android:textSize="18dp" />
 
         </LinearLayout>
 
