tela de quiz melhorada e concluida

--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -27,7 +27,7 @@
             android:id="@+id/open_quizzes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal" />
+            android:orientation="vertical" />
 
         <TextView
             android:id="@+id/empty_open_quizzes"
