--- a/app/src/main/res/layout/confidence_item.xml
+++ b/app/src/main/res/layout/confidence_item.xml
@@ -19,14 +19,30 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/subject"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="subject"
-                android:textColor="@android:color/primary_text_light"
-                android:textSize="18dp" />
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/subject"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="subject"
+                    android:textColor="@android:color/primary_text_light"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:id="@+id/topic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="topic"
+                    android:textColor="@android:color/darker_gray" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/confidence_status_image"
