--- a/app/src/main/res/layout/perfil_fragment.xml
+++ b/app/src/main/res/layout/perfil_fragment.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/Quiz"
+            android:id="@+id/quiz"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Quiz"
@@ -28,21 +28,21 @@
             tools:layout_editor_absoluteY="32dp" />
 
         <Button
-            android:id="@+id/Presenca"
+            android:id="@+id/presenca"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Presença"
             tools:layout_editor_absoluteX="300dp" />
 
         <Button
-            android:id="@+id/Humor"
+            android:id="@+id/humor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Humor"
             tools:layout_editor_absoluteX="307dp" />
 
         <Button
-            android:id="@+id/Autoconfianca"
+            android:id="@+id/autoconfianca"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Autoconfiança"
